spacing bug fixes

--- a/css/a-lemu.css
+++ b/css/a-lemu.css
@@ -24,8 +24,8 @@ b{font-family: Bree Serif, Advent Pro}
 	border-radius: 15px;}
 .button button{
 	background-color: #201e1f;}
-.bio{padding-left: 150px; padding-right: 150px;}
-.experiences{padding-right: 150px; padding-left: 150px; font-family: Bree Serif, Advent Pro;}
+.bio{}
+.experiences{font-family: Bree Serif, Advent Pro;}
 .footer {
 	color: #201e1f; overflow: hidden; padding-bottom: 2px; padding-top: 15px;}
 .footer footer{
